# sinclair

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  awareness.html  cli.html  compare.md  configuration.html  gpui.md  guise.md  install.html  libsinclair.md  mcp.html  navigate.html  ostabs.html  parity.md  pluginauthoring.md  plugins-wasm.md  pluginsv2.md  plugintutorial.html  productivity.html  release.md  script.js  statushooks.html  style.css  themes.html  workspace.html  workspacesetup.html
.github/workflows/: linux.yml  pages.yml  release.yml  windows-package.yml  windows.yml
assets/: prompt.desktop  sinclair.desktop
crates/app/: Cargo.toml  build.rs
crates/app/src/: about.rs  agenthooks.rs  agentpicker.rs  agentstate.rs  appid.rs  appkit.rs  boxdraw.rs  bridge.rs  catalog.rs  clipboard.rs  colors.rs  confwrite.rs  element.rs  envpath.rs  exportcmd.rs  font.rs  guisetheme.rs  guiwasm.rs  help.rs  ipc.rs  keys.rs  linux.rs  main.rs  mcpbridge.rs  metrics.rs  mouse.rs  newagent.rs  notes.rs  ospicker.rs  palette.rs  paths.rs  pluginhost.rs  pluginmanager.rs  pluginwebview.rs  pluginwindow.rs  pointer.rs  quick.rs  redact.rs  relay.rs  relaywatch.rs  (+21 more)
crates/app/src/element/: draw.rs  mod.rs  snapshot.rs
crates/app/src/help/: content.rs  mod.rs  render.rs
crates/app/src/ipc/: mod.rs  unix.rs  windows.rs
crates/app/src/notify/: mac.rs  mod.rs
crates/app/src/relay/: agent.rs  mod.rs  team.rs
crates/app/src/root/: agents.rs  boot.rs  containers.rs  dialogs.rs  dispatch.rs  layout.rs  mcp.rs  menus.rs  mod.rs  panes.rs  persist.rs  pluginpanel.rs  quickopen.rs  render.rs  savebuffer.rs  sidebar.rs  tabs.rs  triggers.rs  worktrees.rs
crates/app/src/settings/: mod.rs  model.rs  ui.rs
crates/app/src/settings/schema/: ai.rs  mod.rs
crates/app/src/settings/ui/: ai.rs  controls.rs  lists.rs  mod.rs  rows.rs
crates/app/src/view/: assist.rs  copymode.rs  hints.rs  keys.rs  mod.rs  mouse.rs  notify.rs  scroll.rs  search.rs  suggest.rs
crates/app/tests/: agenthooks.rs  agentstate.rs  boxdraw.rs  bridge.rs  colors.rs  confwrite.rs  element.rs  font.rs  keys.rs  main.rs  metrics.rs  mouse.rs  notify.rs  pluginhost.rs  pointer.rs  relay.rs  resume.rs  session.rs  shellinteg.rs  sidecar.rs  splits.rs  tabbar.rs  textedit.rs  update.rs  updateui.rs  view.rs  worktree.rs  worktrees.rs
crates/assist/: Cargo.toml
crates/config/: Cargo.toml
crates/container/: Cargo.toml
crates/input/: Cargo.toml
crates/libsinclair/: README.md  llm.txt
crates/macros/: Cargo.toml
crates/mcp/: Cargo.toml
crates/notes/: Cargo.toml  readme.md
crates/notes/src/: main.rs  server.rs  token.rs  vault.rs
crates/notes/web/: app.js  style.css
crates/plugin/: Cargo.toml
crates/pty/: Cargo.toml
crates/pty/src/: control.rs  lib.rs  pump.rs  session.rs  spawn.rs  unix.rs  winsize.rs
crates/pty/src/windows/: spawn.rs
crates/pty/tests/: control.rs  pump.rs  session.rs  spawn.rs  unix.rs  winsize.rs
crates/relay/: Cargo.toml
crates/relay/roles/: supervisor.toml
crates/relay/src/: bus.rs  main.rs  proc.rs
crates/relay/src/cli/: agent.rs  bridge.rs  build.rs  feed.rs  http.rs  launch.rs  mod.rs  paths.rs  ps.rs  role.rs  server.rs  team.rs  watch.rs
crates/relay/src/control/: mod.rs
crates/relay/src/db/: mod.rs
crates/relay/src/mcp/: mod.rs
crates/relay/src/protocol/: mod.rs
crates/relay/src/spawn/: mod.rs
crates/relay/src/state/: mod.rs
crates/relay/src/tools/: mod.rs
crates/relay/src/transport/: mod.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: event.rs  options.rs  session.rs
crates/terminal/tests/: e2e.rs  options.rs  session.rs
crates/theme/: Cargo.toml
crates/updater/: Cargo.toml
crates/vt/: Cargo.toml
crates/vt/src/: cell.rs  charset.rs  color.rs  cursor.rs  graphics.rs  hyperlink.rs  kitty.rs  lib.rs  mode.rs  screen.rs  search.rs  selection.rs  semantic.rs  sgr.rs  sixel.rs  url.rs
crates/vt/src/grid/: codec.rs  damage.rs  mod.rs  row.rs  scrollback.rs
crates/vt/src/term/: apc.rs  csi.rs  dcs.rs  mod.rs  ops.rs  osc.rs  perform.rs  report.rs  select.rs
crates/vt/tests/: cell.rs  charset.rs  color.rs  cursor.rs  graphics.rs  hyperlink.rs  kitty.rs  mode.rs  screen.rs  search.rs  selection.rs  semantic.rs  sequences.rs  sgr.rs  url.rs
crates/vt/tests/grid/: codec.rs  damage.rs  mod.rs  row.rs  scrollback.rs
crates/vt/tests/term/: apc.rs  csi.rs  dcs.rs  mod.rs  ops.rs  osc.rs  perform.rs  report.rs  select.rs
crates/workspace/: Cargo.toml
docs/: agents.html  agentteams.html  appearance.html  assist.html  automation.html  awareness.html  cli.html  clipboard.html  compare.md  configkeys.html  configuration.html  coverage.html  designer.html  docs.css  docs.html  docs.js  guise.md  images.html  index.html  install.html  keybindings.html  mcp.html  navigate.html  ostabs.html  palette.html  parity.md  pauseresume.md  pluginauthoring.md  plugins.html  pluginsv2.md  plugintutorial.html  productivity.html  quickstart.html  recording.html  relay.md  release.md  roadmap.md  script.js  statushooks.html  style.css  (+5 more)
packaging/: README.md
packaging/chocolatey/: prompt.nuspec  sinclair.nuspec
packaging/scoop/: prompt.json  sinclair.json
packaging/windows/: prompt.wxs  sinclair.wxs
plugins/: README.md  ideas.md
plugins/alert/: plugin.toml  readme.md
plugins/dashboard/: index.html  plugin.toml  plugin.ts  readme.md
plugins/docker/: plugin.toml  plugin.ts  readme.md
plugins/gh/: plugin.toml  readme.md
plugins/git/: plugin.toml  plugin.ts  readme.md
plugins/gitlog/: plugin.toml  readme.md
plugins/k9s/: plugin.toml  readme.md
plugins/lazydocker/: plugin.toml  readme.md
plugins/lazygit/: plugin.toml  readme.md
plugins/notes/: .gitignore  package.json  plugin.toml  readme.md  tsconfig.json
plugins/ports/: plugin.toml  readme.md
plugins/promptdesigner/: plugin.ts  readme.md
plugins/repl/: plugin.toml  readme.md
plugins/screentools/: plugin.toml
scripts/: bundle.sh  dmg.sh  icon.swift  linux.sh  shot.sh  windows.ps1
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
(+161 files in other folders)
