[workspace]
resolver = "2"
members = [
    "crates/assist",
    "crates/app",
    "crates/config",
    "crates/input",
    "crates/macros",
    "crates/mcp",
    "crates/plugin",
    "crates/pty",
    "crates/terminal",
    "crates/theme",
    "crates/vt",
    "crates/workspace",
]

# Mirrored from zed's workspace — cargo patches don't propagate through git
# dependencies. See docs/gpui.md.
[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
# Vendored copy of `block` (transitive, via gpui -> cocoa) with a one-line fix
# for a future-incompatibility lint (uninhabited extern static, #74840).
block = { path = "thirdparty/block" }

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
