[workspace]
resolver = "2"
members = [
    "crates/assist",
    "crates/app",
    "crates/cast",
    "crates/config",
    "crates/container",
    "crates/export",
    "crates/input",
    "crates/macros",
    "crates/mcp",
    "crates/notes",
    "crates/plugin",
    "crates/pluginrt",
    "crates/pty",
    "crates/relay",
    "crates/terminal",
    "crates/theme",
    "crates/vt",
    "crates/workspace",
]
# vendor/guise is its own cargo workspace (a submodule); exclude it so its
# crates inherit from guise's [workspace.package], not ours. We depend on
# vendor/guise/crates/guise by path.
exclude = ["vendor/guise", "crates/pluginrt/testguest"]

# Mirrored from zed's workspace — cargo patches don't propagate through git
# dependencies. See docs/gpui.md.
[patch.crates-io]
# Redirect the crates.io gpui that `guise-ui` requests (^0.2.2) onto the exact
# zed git rev the app already builds, so a single gpui resolves across the tree.
gpui = { git = "https://github.com/zed-industries/zed", rev = "96285fc1" }
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
# Vendored copy of `block` (transitive, via gpui -> cocoa) with a one-line fix
# for a future-incompatibility lint (uninhabited extern static, #74840).
block = { path = "thirdparty/block" }

[workspace.package]
version = "1.25.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
