[package]
name = "notes"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "notes"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "process", "fs"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
include_dir = "0.7"
