[package]
autotests = false
name = "pty"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["pty", "process", "termios", "fs", "event", "pipe", "stdio"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
