[package]
autotests = false
name = "terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pty = { path = "../pty" }
vt = { path = "../vt" }

# End-to-end integration test (unit tests are compiled in-crate via #[path],
# so auto-discovery is off; declare this explicitly).
[[test]]
name = "e2e"
path = "tests/e2e.rs"
